--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
     font-family: Arial, sans-serif;
 }
 
+
+/*  Desktop Banner Styles */
 .banner {
     background-color: #004D71;
     padding: 15px;
@@ -57,6 +59,7 @@ body {
     transition: color 0.5s ease-in-out
 }
 
+/* Sets Mobile Hamburger to Hidden */
 .hamburger-menu {
     display: none;
     cursor: pointer;
@@ -71,6 +74,7 @@ body {
     justify-content: center;
 }
 
+/* The Active Page is Highlighted */
 .active {
     color: #FF9E18 !important;
 }
@@ -85,16 +89,13 @@ body {
     font-size: 15px;
 }
 
-
-
-
-
+/* Shows Link is Clickable on Hover */
 .nav li a:hover {
     color: #FF9E18;
     transition: color 0.5s ease-in-out
 }
 
-
+/* Hero Styles */
 .hero {
     min-height: 22rem;
     text-align: right;
@@ -152,6 +153,7 @@ body {
     text-decoration: underline;
 }
 
+/* Sets Mobile Hero to Hidden */
 .mobile-hero {
     display: none;
     justify-content: center;
@@ -165,6 +167,7 @@ body {
     width: 80%;
 }
 
+/* Centered Section Styles */
 .centered-section {
     display: flex;
     flex-direction: column;
@@ -190,6 +193,7 @@ body {
 
 }
 
+/* Card Styles */
 .card-container {
     display: flex;
     justify-content: center;
@@ -262,6 +266,7 @@ body {
 
 }
 
+/* Card Overlay Styles */
 .overlay {
     display: flex;
     position: fixed;
@@ -278,11 +283,11 @@ body {
     transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
 }
 
+/* On Show Sets Opacity to 1 */
 .overlay.show {
     display: flex;
     opacity: 1;
-    visibility: visible;
-    
+    visibility: visible; 
 }
 
 #overlay-img {
@@ -290,6 +295,7 @@ body {
     height: 50%;
 }
 
+/* Close Button  */
 .overlay-content {
     position: absolute;
     top: 10px;
@@ -300,6 +306,7 @@ body {
     height: 20px;
 }
 
+/* Mobile Styles for Overlay Elements */
 .mobile-overlay-content {
     width: 30px;
     height: 30px;
@@ -367,6 +374,7 @@ body {
 
 }
 
+/* Hides Mobile Elements */
 .mobile-phone-number {
     display: none;
 }
@@ -383,7 +391,7 @@ body {
     display: none;
 }
 
-
+/* Tablet or Large Phone */
 @media screen and (max-width: 1000px) {
 
     .hero {
@@ -512,6 +520,7 @@ body {
 
 }
 
+/* Small Phone */
 @media screen and (max-width: 900px) {
     .banner {
         width: 98%
@@ -537,6 +546,7 @@ body {
 
 }
 
+/* X-Small Phone */
 @media screen and (max-width: 250px) {
     .banner {
         width: 98%;
